--- a/styles/style.css
+++ b/styles/style.css
@@ -45,3 +45,11 @@ header nav ul li:last-child button {
   padding: .9rem;
   border-radius: 8px;
 }
+
+/* mobile design */
+@media only screen and (max-width: 632px) {
+  header nav ul input {
+    width: 300px;
+    height: 2rem;
+  }
+}
