Feat: adjust footer with mobile design
Change footer design with CSS media query

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,4 +84,16 @@ footer section:last-child {
     width: 300px;
     height: 2rem;
   }
+
+  footer section:first-child {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    row-gap: 1rem;
+  }
+
+  footer section:first-child div:nth-child(3) {
+    margin-inline-start: 3rem;
+  }
 }
