--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,19 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+img {
+  display: flex;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  transition: 0.3s;
+}
+
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   letter-spacing: 1px;
