Feat: adjust display of content on bigger width
Add CSS media query for bigger width, alter main content display

--- a/styles/style.css
+++ b/styles/style.css
@@ -207,3 +207,20 @@ footer section:last-child {
     margin-inline-start: 3rem;
   }
 }
+
+@media only screen and (min-width: 768px) {
+  main section article figure {
+    display: flex;
+    flex-direction: row;
+  }
+
+  main section article:nth-child(2) figure,
+  main section article:nth-child(4) figure {
+    flex-direction: row-reverse;
+  }
+
+  main section article figure img {
+    width: 120%;
+    margin: 1rem;
+  }
+}
