--- a/styles/style.css
+++ b/styles/style.css
@@ -56,14 +56,50 @@ header nav ul input {
   border-radius: 10px;
 }
 
+/* Hamburger menu style */
+header nav ul li:nth-child(7) {
+  display: none;
+  width: 3rem;
+  height: 3rem;
+  margin-inline-start: auto;
+  position: relative;
+}
+
+/* Hamburger menu button to be more visible when on focus */
+header nav ul li:nth-child(7) button:focus {
+  width: inherit;
+  height: inherit;
+}
+
+/* Hamburger menu lines style */
+header nav ul li:nth-child(7) span {
+  background-color: blue;
+  width: 100%;
+  height: 5px;
+  border-radius: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+header nav ul li:nth-child(7) span:first-child {
+  top: 25%;
+}
+
+header nav ul li:nth-child(7) span:last-child {
+  top: 75%;
+}
+
 header nav ul button {
   font-size: .9rem;
   border: 0 solid transparent;
 }
 
-header nav ul li:nth-child(7) button {
+header nav ul li:nth-child(8) button {
   background-color: transparent;
   padding: .5rem;
+  margin-inline-start: auto;
 }
 
 header nav ul li:last-child button {
@@ -190,9 +226,21 @@ footer section:last-child {
 
 /* mobile design */
 @media only screen and (max-width: 632px) {
-  header nav ul input {
-    width: 300px;
-    height: 2rem;
+
+  /* hide header nav elements to only appear hamburger menu */
+  header nav ul li:nth-child(2),
+  header nav ul li:nth-child(3),
+  header nav ul li:nth-child(4),
+  header nav ul li:nth-child(5),
+  header nav ul li:nth-child(6),
+  header nav ul li:nth-child(8),
+  header nav ul li:nth-child(9) {
+    display: none;
+  }
+  
+  /* Show hamburger menu */
+  header nav ul li:nth-child(7) {
+    display: block;
   }
 
   footer section:first-child {
