--- a/styles/style.css
+++ b/styles/style.css
@@ -116,8 +116,13 @@ header nav ul li:last-child button {
 main button {
   background-color: blue;
   color: white;
+  font-size: 1rem;
   padding: 1rem;
   border-radius: 30%;
+}
+
+main p {
+  max-width: 70%;
 }
 
 main > article:first-child {
@@ -164,7 +169,7 @@ main section article figure {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-block-end: 1.5rem;
+  margin-block-end: 8rem;
 }
 
 main section article figcaption {
@@ -272,7 +277,16 @@ footer section:last-child {
   }
 
   main section article figure img {
-    width: 120%;
+    width: 50%;
     margin: 1rem;
+  }
+
+  main section article h2 {
+    font-size: 3rem;
+  }
+
+  main > article:first-child p,
+  main section article p {
+    font-size: 1.2rem;
   }
 }
