--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,14 @@
+:root {
+  --primary-color: #0000ff;
+  --secondary-color: #ffa500;
+  --secondary-color-auxiliary: #ffcd1f;
+  --text-light: #f6f7fb;
+  --text-light-auxiliary: #edeff4;
+  --text-dark: #29292a;
+  --white: #ffffff;
+  --gray: #898d9a;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -39,24 +50,24 @@ header nav ul li {
 
 header nav ul a {
   text-decoration: none;
-  color: #29292a;
+  color: var(--text-dark);
 }
 
 header nav ul a:focus,
 header nav ul a:hover {
-  border-block-end: 2px solid blue;
+  border-block-end: 2px solid var(--primary-color);
   transition: 0.2s;
 }
 
 header nav ul input {
-  background-color: #f6f7fb;
+  background-color: var(--text-light);
   font-family: inherit;
   font-size: 1rem;
   width: 600px;
   height: 2rem;
   padding: 0;
   padding-inline-start: 10px;
-  border: 1px solid #edeff4;
+  border: 1px solid var(--text-light-auxiliary);
   border-radius: 10px;
 }
 
@@ -77,7 +88,7 @@ header nav ul li:nth-child(7) button:focus {
 
 /* Hamburger menu lines style */
 header nav ul li:nth-child(7) span {
-  background-color: blue;
+  background-color: var(--primary-color);
   width: 100%;
   height: 5px;
   border-radius: 25px;
@@ -111,15 +122,15 @@ header nav ul li:nth-child(8) button {
 }
 
 header nav ul li:last-child button {
-  background-color: #ffcd1f;
+  background-color: var(--secondary-color-auxiliary);
   font-weight: bolder;
   padding: .9rem;
   border-radius: 8px;
 }
 
 main button {
-  background-color: blue;
-  color: white;
+  background-color: var(--primary-color);
+  color: var(--white);
   font-size: 1rem;
   padding: 1rem;
   border-radius: 30%;
@@ -156,11 +167,11 @@ main > article:first-child h1 {
 }
 
 main > article:first-child h1 strong:first-child {
-  color: rgb(103, 103, 255);
+  color: var(--primary-color);
 }
 
 main > article:first-child h1 strong:last-child {
-  color: orange;
+  color: var(--secondary-color);
 }
 
 main > article:first-child h2 {
@@ -213,7 +224,7 @@ main section article p {
 }
 
 footer {
-  background-color: #f6f7fb;
+  background-color: var(--text-light);
   padding-block: 1rem;
 }
 
@@ -236,11 +247,11 @@ footer section:first-child p {
 }
 
 footer section:first-child p a {
-  color: #29292a;
+  color: var(--text-dark);
 }
 
 footer section:last-child {
-  color: #898d9a;
+  color: var(--gray);
   font-size: 12px;
   display: flex;
   flex-direction: row;
