--- a/styles/style.css
+++ b/styles/style.css
@@ -223,6 +223,58 @@ main section article p {
   line-height: 1.5rem;
 }
 
+main > article:last-child {
+  background-color: var(--text-light-auxiliary);
+  padding-block: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 3rem;
+}
+
+main > article:last-child section article {
+  padding: 1rem;
+  border-radius: 2%;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  row-gap: 0.5rem;
+  transition: 0.6s;
+}
+
+main > article:last-child section article img {
+  max-width: 20%;
+  border: 0.2rem solid var(--secondary-color);
+  border-radius: 2rem;
+}
+
+main > article:last-child section article h3 {
+  color: var(--secondary-color);
+  margin-block-end: 1rem;
+}
+
+main > article:last-child section article p {
+  font-size: 1.2rem;
+}
+
+main > article:last-child section article:hover {
+  background-color: var(--secondary-color);
+}
+
+main > article:last-child section article:hover h3,
+main > article:last-child section article:hover p {
+  color: var(--white);
+  transition: inherit;
+}
+
+main > article:last-child section article:hover img {
+  border-color: var(--white);
+  transition: 0.1s;
+}
+
 footer {
   background-color: var(--text-light);
   padding-block: 1rem;
@@ -326,4 +378,31 @@ footer section:last-child {
   main section article p {
     font-size: 1.2rem;
   }
+
+  main > article:last-child h2 {
+    font-size: 1.8rem;
+  }
+
+  main > article:last-child section {
+    display: flex;
+    flex-flow: row wrap;
+  }
+
+  main > article:last-child section > article {
+    flex: 12rem;
+    max-width: 23rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  main > article:last-child section article img {
+    min-width: 50%;
+  }
+
+  main > article:last-child section article p {
+    min-width: 10rem;
+  }
+
 }
