Feat: adjust display of images on main content
Change flex direction of certain elements and update a user card text

--- a/styles/style.css
+++ b/styles/style.css
@@ -233,6 +233,10 @@ main > article:last-child {
   row-gap: 3rem;
 }
 
+main > article:last-child h2 {
+  text-align: center;
+}
+
 main > article:last-child section article {
   padding: 1rem;
   border-radius: 2%;
@@ -360,8 +364,8 @@ footer section:last-child {
     flex-direction: row;
   }
 
-  main section article:nth-child(2) figure,
-  main section article:nth-child(4) figure {
+  main section article:nth-child(1) figure,
+  main section article:nth-child(3) figure {
     flex-direction: row-reverse;
   }
 
